policies/require-run-as-nonroot.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-run-as-nonroot
  annotations:
    policies.kyverno.io/title: Exigir ejecución sin privilegios de root
    policies.kyverno.io/description: >-
      Todos los pods deben ejecutarse como usuario no root,
      con runAsNonRoot=true y allowPrivilegeEscalation=false.
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: validate-security-context
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kube-public
                - kube-node-lease
                - argocd
                - kyverno
                - argo-rollouts
      validate:
        message: "Los pods deben ejecutarse con runAsNonRoot=true y allowPrivilegeEscalation=false."
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
            containers:
              - securityContext:
                  allowPrivilegeEscalation: false
